white-space: nowrap; for editable div to prevent for line breaking while editing

--- a/public/style.css
+++ b/public/style.css
@@ -105,7 +105,6 @@ p.user {
 }
 
 #username {
-    /* height: 33px; */
     font-family: 'Comfortaa', sans-serif;
     font-size: 16px;
     font-weight: bold;
@@ -113,7 +112,7 @@ p.user {
     border: none;
     background: #666;
     float: right;
-    min-width: 20px;
+    white-space:nowrap;
     margin-right: 5px;
     margin-top: 5px;
 }
